--- a/Inst/Base.lproj/Main.storyboard
+++ b/Inst/Base.lproj/Main.storyboard
@@ -92,7 +92,6 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" id="htz-Nh-leS"/>
                     <connections>
                         <outlet property="passwordField" destination="eGs-KM-uac" id="XoU-1w-mvG"/>
                         <outlet property="userNameField" destination="9Oh-eW-Qrl" id="uI7-wD-xb4"/>
@@ -115,11 +114,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="308" id="vH0-qg-Lh8" customClass="PostCell" customModule="Inst" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="308"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostCell" rowHeight="345" id="vH0-qg-Lh8" customClass="PostCell" customModule="Inst" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="345"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vH0-qg-Lh8" id="uXS-Y7-eyx">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="308"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="345"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="image_placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="yHP-5k-fMd">
@@ -129,7 +128,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gee this photo is cool" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DoD-RA-XMo">
-                                                    <rect key="frame" x="120" y="228" width="274" height="18"/>
+                                                    <rect key="frame" x="120" y="233" width="274" height="21"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="274" id="F58-iJ-wOe"/>
                                                     </constraints>
@@ -138,23 +137,23 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chakane" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="utA-QS-uQK">
-                                                    <rect key="frame" x="20" y="228" width="67" height="18"/>
+                                                    <rect key="frame" x="8" y="233" width="67" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="DoD-RA-XMo" firstAttribute="top" secondItem="yHP-5k-fMd" secondAttribute="bottom" constant="3" id="0yW-nb-O6W"/>
-                                                <constraint firstItem="utA-QS-uQK" firstAttribute="top" secondItem="yHP-5k-fMd" secondAttribute="bottom" constant="3" id="4En-B6-qfV"/>
+                                                <constraint firstItem="DoD-RA-XMo" firstAttribute="top" secondItem="yHP-5k-fMd" secondAttribute="bottom" constant="8" symbolic="YES" id="0yW-nb-O6W"/>
+                                                <constraint firstItem="utA-QS-uQK" firstAttribute="top" secondItem="yHP-5k-fMd" secondAttribute="bottom" constant="8" symbolic="YES" id="4En-B6-qfV"/>
                                                 <constraint firstItem="DoD-RA-XMo" firstAttribute="baseline" secondItem="utA-QS-uQK" secondAttribute="baseline" id="8nM-cw-BYS"/>
                                                 <constraint firstItem="yHP-5k-fMd" firstAttribute="centerX" secondItem="uXS-Y7-eyx" secondAttribute="centerX" id="DA1-DM-Wgs"/>
                                                 <constraint firstItem="yHP-5k-fMd" firstAttribute="top" secondItem="uXS-Y7-eyx" secondAttribute="topMargin" constant="-3" id="X8e-aL-6ux"/>
                                                 <constraint firstItem="yHP-5k-fMd" firstAttribute="leading" secondItem="uXS-Y7-eyx" secondAttribute="leadingMargin" constant="-12" id="aCJ-lX-8WI"/>
                                                 <constraint firstItem="DoD-RA-XMo" firstAttribute="trailing" secondItem="uXS-Y7-eyx" secondAttribute="trailingMargin" id="b4g-bX-LUp"/>
-                                                <constraint firstItem="yHP-5k-fMd" firstAttribute="leading" secondItem="utA-QS-uQK" secondAttribute="leading" constant="-12" id="l9y-aq-BhS"/>
+                                                <constraint firstItem="yHP-5k-fMd" firstAttribute="leading" secondItem="utA-QS-uQK" secondAttribute="leading" id="l9y-aq-BhS"/>
                                                 <constraint firstItem="DoD-RA-XMo" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="utA-QS-uQK" secondAttribute="trailing" constant="8" symbolic="YES" id="lyH-pq-d44"/>
-                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="DoD-RA-XMo" secondAttribute="bottom" constant="51" id="tIg-34-s7O"/>
+                                                <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="DoD-RA-XMo" secondAttribute="bottom" constant="80" id="tIg-34-s7O"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -162,63 +161,6 @@
                                             <outlet property="photoView" destination="yHP-5k-fMd" id="puM-7a-kbs"/>
                                             <outlet property="usernameLabel" destination="utA-QS-uQK" id="KZf-4U-zT0"/>
                                         </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" id="g2s-Uh-gTW" customClass="CommentCell" customModule="Inst" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="336" width="414" height="37.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="g2s-Uh-gTW" id="Xaq-Ip-Esy">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chakane" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UtU-s9-x5k">
-                                                    <rect key="frame" x="16" y="8" width="72" height="21"/>
-                                                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z6O-TX-vzV">
-                                                    <rect key="frame" x="96" y="8" width="140" height="21"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Z6O-TX-vzV" secondAttribute="trailing" constant="8" id="4xI-40-gxb"/>
-                                                <constraint firstItem="Z6O-TX-vzV" firstAttribute="top" secondItem="Xaq-Ip-Esy" secondAttribute="top" constant="8" id="ehr-4L-JVs"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Z6O-TX-vzV" secondAttribute="bottom" constant="8" id="lcR-bh-V6a"/>
-                                                <constraint firstItem="UtU-s9-x5k" firstAttribute="leading" secondItem="Xaq-Ip-Esy" secondAttribute="leading" constant="16" id="lpm-4I-jDW"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="UtU-s9-x5k" secondAttribute="bottom" constant="8" id="pGv-V2-7Y8"/>
-                                                <constraint firstItem="Z6O-TX-vzV" firstAttribute="leading" secondItem="UtU-s9-x5k" secondAttribute="trailing" constant="8" id="teB-fQ-kh2"/>
-                                                <constraint firstItem="UtU-s9-x5k" firstAttribute="top" secondItem="Xaq-Ip-Esy" secondAttribute="top" constant="8" id="uuf-fl-MQv"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <connections>
-                                            <outlet property="commentLabel" destination="Z6O-TX-vzV" id="62G-nF-VVC"/>
-                                            <outlet property="nameLabel" destination="UtU-s9-x5k" id="Py4-F2-uak"/>
-                                        </connections>
-                                    </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="AddCommentCell" id="3sk-Mx-6SU">
-                                        <rect key="frame" x="0.0" y="373.5" width="414" height="37.5"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3sk-Mx-6SU" id="2ix-nb-kXm">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="37.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="add a comment" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SkX-8A-RN3">
-                                                    <rect key="frame" x="16" y="8" width="390" height="21.5"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="SkX-8A-RN3" firstAttribute="leading" secondItem="2ix-nb-kXm" secondAttribute="leading" constant="16" id="00y-f5-sRj"/>
-                                                <constraint firstAttribute="bottom" secondItem="SkX-8A-RN3" secondAttribute="bottom" constant="8" id="3l5-ZQ-7nc"/>
-                                                <constraint firstItem="SkX-8A-RN3" firstAttribute="top" secondItem="2ix-nb-kXm" secondAttribute="top" constant="8" id="Wnm-kH-1V6"/>
-                                                <constraint firstAttribute="trailing" secondItem="SkX-8A-RN3" secondAttribute="trailing" constant="8" id="fQv-4h-T99"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -233,11 +175,6 @@
                         <viewLayoutGuide key="safeArea" id="ONu-EP-8qz"/>
                     </view>
                     <navigationItem key="navigationItem" id="nW1-7U-eNI">
-                        <barButtonItem key="leftBarButtonItem" title="log out" id="ntL-EI-ciE">
-                            <connections>
-                                <segue destination="BYZ-38-t0r" kind="show" id="8W9-ny-emM"/>
-                            </connections>
-                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" image="insta_camera_btn" id="tuz-ct-B38">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="E2D-Pf-gdJ">
                                 <rect key="frame" x="315" y="0.0" width="79" height="44"/>
